Authentication Bug Fixed | UI Bugs Fixed

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
 
 
 </head>
-<body style="padding-right: 0px !important;">
+<body style="padding-right: 0px !important; background-color: #f5f5f5 !important;">
   <app-root></app-root>
 
 
@@ -474,6 +474,7 @@
 
         setInterval(function (){
           $("body").css("padding-right","0px");
+          $("body").css("overflow-x","hidden");
 
         },1000);
 
